# loan-tool

./: package.json
src/: App.vue  Calculate.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-acce053c8ac64401914f605e75c10627946c6c57435e58ef4ec6a04a8e8b814d.json
src-tauri/_migrations/: 20260617185236_init.sql
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/migrations/: 20260617185236_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: amortization_command.rs  db_commands.rs  loan_commands.rs  mod.rs
src-tauri/src/dtos/: loan_dto.rs  mod.rs
src-tauri/src/entity/: loans.rs  mod.rs
src-tauri/src/models/: LoanEntry.rs  loan_entry.rs  mod.rs
src/entity/: loans.rs  prelude.rs
src/utils/: async.ts
