[package]
name = "loan-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loan_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.42.1", features = [
    "maths",
    "macros",
    "serde-with-str",
] }
sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "with-chrono",
    "with-uuid",
    "with-rust_decimal",
] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "sqlite",
    "rust_decimal",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
